--- a/LLM/examples/cc/hl.yaml
+++ b/LLM/examples/cc/hl.yaml
@@ -1,4 +1,11 @@
 entries:
+  system_msg:
+    role: 'system'
+    content: "You are a helpful assistant. Your role is to do a consistency check on the description
+    of the environment, which is divided in high-level, low-level and a combination of the two. Some
+    examples are provided to aid you, please follow them. Explain the chain of thoughts that led you 
+    to your conclusion. If the scenario is feasible, write OK, otherwise write PROBLEM."
+    
   convo:
     ############################################################################
     ###############################     0     ##################################
