--- a/LLM/examples/multi/few-shots-ll.yaml
+++ b/LLM/examples/multi/few-shots-ll.yaml
@@ -1,9 +1,25 @@
+# entries:
+#   system_msg:
+#     role: 'system'
+#     content: "Given high-level robotic actions and the APIs for low-level actions, divide the 
+#       high-level actions into sets of low-level actions"
+#   files: 
+#     - "ll/general.yaml"
+#     # - "ll/arch.yaml"
+#     - "ll/blocksworld.yaml"
+
+
 entries:
   system_msg:
     role: 'system'
-    content: "Given high-level robotic actions and the APIs for low-level actions, divide the 
-      high-level actions into sets of low-level actions"
+    content: "You are a useful bot trained to generate robotic knowledge bases. Given a robotic 
+    problem, produce a full and fully usable knowledge base in Prolog format as described in the 
+    examples that will be provided. Please, unless explicitly stated in the request or in the 
+    examples, do not omit anything under the brevity pretext; include all relevant information and 
+    details without leaving anything out just to make things shorter or more concise. Do not make
+    assumptions about the problem or the solution, and do not try to infer information that is not
+    clearly stated in the examples or in the description of the scenario."
   files: 
     - "ll/general.yaml"
-    # - "ll/arch.yaml"
-    - "ll/blocksworld.yaml"
+    - "ll/arch/few-shots-arch.yaml"
+    - "ll/blocksworld/few-shots-blocksworld.yaml"
